# multiplayer-racing-game

./: .gitignore  CMakeLists.txt  run_server.bat
build_scripts/macos/: build.sh  build_and_run_client.sh  run_client.sh  run_server.sh
build_scripts/windows/: build.bat  run_client.bat  run_server.bat
client/: CMakeLists.txt
client/assets/shaders/: vs.glsl
client/src/: glad.c  main.cpp
client/src/utils/: Mesh.cpp  Mesh.h  Shader.cpp  input.cpp  input.h  io.cpp
server/: CMakeLists.txt
server/src/: Connection.cpp  Connection.h  Player.cpp  Player.h  main.cpp  mathutils.hpp
